# brit-insurance

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
brit/: __init__.py  auth.py  models.py  pages.py
brit/static/: custom.css
brit/templates/: __init__.py  all.html.jinja  base.html.jinja  list.html.jinja  new.html.jinja  signin.html.jinja  signup.html.jinja
